# am-i-okay

./: README.md  demo.html  deploy.md
app/android-agent/: .gitignore  README.md  gradlew  gradlew.bat  settings.gradle.kts
app/android-agent/app/: build.gradle.kts
app/android-agent/app/release/: output-metadata.json
app/android-agent/app/release/baselineProfiles/0/: app-release.dm
app/android-agent/app/release/baselineProfiles/1/: app-release.dm
app/android-agent/app/src/main/: AndroidManifest.xml
app/back-end/: .env.example  .gitignore  README.md  package.json  tsconfig.json
app/back-end/scripts/: security-check.ts
app/back-end/src/: cap.ts  config.ts  food-auth.ts  food.ts  guestbook.ts  index.ts  message-filter.ts  message-moderation.ts  message-rate-limit.ts  schema.ts  security.ts  server.ts  store.ts  types.ts  utils.ts  ws.ts
app/desktop-agent/: Cargo.toml  README.md
app/desktop-agent/src/: config.rs  event.rs  main.rs  transport.rs
app/desktop-agent/src/platform/: macos.rs  mod.rs  windows.rs
app/front-end/: README.md  next.config.ts  package.json
app/front-end/app/: globals.css  layout.tsx  loading.tsx  page.tsx
app/front-end/app/api/dashboard/current/: route.ts
app/front-end/app/api/online/: route.ts
app/front-end/app/debug/: debug-client.tsx  page.tsx
app/front-end/app/guestbook/: page.tsx
app/front-end/src/components/: gooey-toast-provider.tsx  message-toast-provider.tsx
app/front-end/src/components/dashboard/: active-device-card.tsx  active-devices-section.tsx  dashboard-header.tsx  dashboard-utils.ts  device-glyph.tsx  device-status-section.tsx  food-counter-section.tsx  food-fall-overlay.tsx  message-board-section.tsx  recent-activity-section.tsx  site-footer-section.tsx
app/front-end/src/components/guestbook/: guestbook-composer.tsx  guestbook-header.tsx  guestbook-timeline.tsx
app/front-end/src/components/human/: page-gate-screen.tsx
app/front-end/src/hooks/: use-dashboard-stream.ts  use-food-counter.ts  use-human-gate.ts  use-message-board.ts  use-online-count.ts
app/front-end/src/lib/: api.ts  env.ts  format.ts  human-gate.ts  random.ts  ws.ts
app/front-end/src/lib/server/: env.ts  proxy.ts
app/front-end/src/types/: activity.ts  guestbook.ts
(+31 files in other folders)
