[package]
name = "desktop-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
block2 = "0.6"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSWorkspace", "NSRunningApplication", "libc"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSDate", "NSNotification", "NSObjCRuntime", "NSOperation", "NSRunLoop", "NSString", "block2"] }

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
